# Chapulin

./: .gitignore  .justfile  .travis.yml  Cargo.toml  README.md  rustfmt.toml
examples/: copy.rs
src/: chapulin.rs  main.rs
src/chromosomal_loci/: cl_aligned.rs
src/controllers/: ac_subcmd.rs  cc_subcmd.rs  cr_subcmd.rs  gc_subcmd.rs  me_subcmd.rs  mod.rs  sv_subcmd.rs  t_subcmd.rs
src/error/: common_error.rs  config_error.rs  me_error.rs  mod.rs  sv_error.rs
src/file_reader/: mod.rs
src/macros/: chromosomal_loci_macro.rs  mc_error.rs  mc_func.rs  mc_modules.rs  mc_sett.rs  mc_utils.rs  mod.rs
src/mobile_elements/: me_aligned.rs  me_dstruct.rs  me_registry.rs  mod.rs
src/modules/: chromosomal_loci.rs  fasta_read.rs  mod.rs  structural_variant.rs
src/modules/chromosomal_loci/: cl_aligned.rs  cl_dstruct.rs  cl_filter.rs  mod.rs
src/modules/fasta_read/: cache_controller.rs  fasta_cache_read.rs  fasta_cache_write.rs  fasta_file_read.rs  fasta_read.rs  mod.rs
src/modules/mobile_elements/: me_aligned.rs  me_registry.rs  mod.rs
src/modules/peak_identification/: mod.rs  pi_mapping.rs  pi_me_mapping.rs  pi_sv_mapping.rs
src/modules/reference_genome/: mod.rs  ref_cache_write.rs  reference_read.rs
src/modules/structural_variant/: mod.rs  sv_registry.rs
src/settings/: collector.rs  config.rs  constants.rs  defaults.rs  mod.rs
src/utils/: alias.rs  anchor_enum.rs  anchor_read.rs  break_point.rs  chr_anchor.rs  chr_anchor_enum.rs  chranchor_enum.rs  cigar.rs  collector.rs  element_counter.rs  erv_annotations.rs  file_reader.rs  flag_interpretor.rs  hashmap_init.rs  io.rs  me_anchor.rs  me_chimeric_pair.rs  me_chimeric_read.rs  me_library.rs  me_read.rs  mobel_counter.rs  mod.rs  progress.rs  read_record.rs  read_sequence.rs  record.rs  strander.rs  sv_chimeric_pair.rs  sv_chimeric_read.rs  sv_type.rs  thresholder.rs
src/utils/cli/: completion.rs  help.rs  mod.rs
src/utils/functions/: chr_counter.rs  element_counter.rs  file_reader.rs  flag_interpretor.rs  identificator.rs  mod.rs  strander.rs  thresholder.rs
src/utils/io/: file_reader.rs
src/utils/progress/: copy.rs  mod.rs
src/utils/structures/: chr_anchor.rs  cigar.rs  me_anchor.rs  me_chimeric_pair.rs  me_chimeric_read.rs  me_library.rs  mod.rs  sv_chimeric_pair.rs  sv_chimeric_read.rs  sv_type.rs
tests/: error_handling.rs  macros.rs  tests.rs
tests/modules/: mod.rs
tests/modules/chromosomal_loci/: cl_aligned.rs  cl_filter.rs  mod.rs
tests/modules/fasta_read/: fasta_file_read.rs  mod.rs
tests/modules/mobile_elements/: me_aligned.rs  mod.rs
tests/modules/peak_identification/: mod.rs  pi_me_mapping.rs
tests/samples/: cl_alignment.sam  dummy_ref.fa  me_alignment.sam
tests/utils/: flag_interpretor.rs  mod.rs  thresholder.rs
