
[package]
name = "Chapulin"
version = "0.1.0"
authors = ["Daniel Rivas <danielrivasmd@gmail.com>"]
edition = "2018"


[[bin]]
name = "chapulin"
path = "src/bin/main.rs"
doc = false


[lib]
name = "chapulin"
path = "src/chapulin.rs"


[dependencies]
libc = "0.2.70"
clap = "2.33.1"
config = "0.10.1"
bytelines = "2.2"
derive-new = "0.5"
thiserror = "1.0.20"
anyhow = "1.0.31"
icecream = "0.1.0"
data-test = "0.1.0"
colored = "2"
log = "0.4"
pretty_env_logger = "0.4"

# NOTE: this import bugs `convert` implementation
# anyhow = { version = "1.0", default-features = false }
