
[package]
name = "Chapulin"
version = "0.2.0"
authors = ["Daniel Rivas <danielrivasmd@gmail.com>"]
edition = "2018"


[[bin]]
name = "chapulin"
path = "src/bin/main.rs"
doc = false


[lib]
name = "chapulin"
path = "src/chapulin.rs"


[profile.release]
debug = true


[dependencies]
libc = "0.2.70"
clap = "3.0.0-beta.2"
clap_generate = "3.0.0-beta.2"
config = "0.11.0"
bytelines = "2.2"
derive-new = "0.5"
thiserror = "1.0.20"
anyhow = "1.0.31"
icecream = "0.1.0"
data-test = "0.1.0"
colored = "2"
lazy_static = "1.4.0"
log = "0.4"
pretty_env_logger = "0.4"
indicatif = "0.15.0"

fuzzy_logic = {path = "../fuzzy_logic"}
genomic_structures = {path = "../genomic_structures"}

# NOTE: this import bugs `convert` implementation
# anyhow = { version = "1.0", default-features = false }
