
[package]
name = "Chapulin"
version = "0.2.0"
authors = ["Daniel Rivas <danielrivasmd@gmail.com>"]
edition = "2018"
# description = "Library for interacting with genomic structures, namely mobile elements and structural variants."
# documentation = "https://docs.rs/genomic_structures"
# readme = "README.md"
# homepage = "https://github.com/DanielRivasMD"
# repository = "https://github.com/DanielRivasMD/genomic_structures"
# license = "GNU General Public License v3.0"
# keywords = ["research-tool", "genetics", "genomics", "bioinformatics", "computational-biology"]
# categories = ["library", "command-line-utilities", "development-tools", "research-tool"]


[[bin]]
name = "chapulin"
path = "src/bin/main.rs"
doc = false


[lib]
name = "chapulin"
path = "src/chapulin.rs"


[profile.release]
debug = true


[dependencies]
anyhow = "1.0.31"
bytelines = "2.2"
clap = { version = "4.1.4", features = ["derive"] }
clap_generate = "3.0.1"
colored = "2"
config = "0.13.3"
derive-new = "0.5"
indicatif = "0.15.0"
lazy_static = "1.4.0"
libc = "0.2.70"
log = "0.4"
pretty_env_logger = "0.4"
thiserror = "1.0.20"

genomic_structures = {path = "../genomic_structures"}
# fuzzy_logic = {path = "../fuzzy_logic"}

# NOTE: this import bugs `convert` implementation
# anyhow = { version = "1.0", default-features = false }
